test/ui/tests/missing-program-entry.lushui
;;; TEST fail check --component-type=executable

